--- a/Idle Factory/Base.lproj/Main.storyboard
+++ b/Idle Factory/Base.lproj/Main.storyboard
@@ -17,20 +17,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BG_Streets" translatesAutoresizingMaskIntoConstraints="NO" id="qSa-BR-7ga">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fundo00" translatesAutoresizingMaskIntoConstraints="NO" id="qSa-BR-7ga">
                                 <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="industries-park" translatesAutoresizingMaskIntoConstraints="NO" id="JPQ-ff-5Om">
-                                <rect key="frame" x="0.0" y="30" width="193" height="91"/>
+                                <rect key="frame" x="0.0" y="30" width="200" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Ov0-yY-z1v"/>
+                                    <constraint firstAttribute="width" constant="200" id="Uel-7m-UiF"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="qSa-BR-7ga" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" id="1ds-xo-Szl"/>
-                            <constraint firstAttribute="trailing" secondItem="JPQ-ff-5Om" secondAttribute="trailing" constant="703" id="DBt-ma-hWT"/>
                             <constraint firstItem="qSa-BR-7ga" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="SED-q9-iTm"/>
-                            <constraint firstAttribute="bottom" secondItem="JPQ-ff-5Om" secondAttribute="bottom" constant="293" id="WCM-hO-rbz"/>
                             <constraint firstItem="qSa-BR-7ga" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" id="cRq-Wv-707"/>
                             <constraint firstItem="JPQ-ff-5Om" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" id="diM-yJ-dgQ"/>
                             <constraint firstItem="JPQ-ff-5Om" firstAttribute="top" secondItem="3se-qz-xqx" secondAttribute="top" constant="30" id="msm-00-OcZ"/>
@@ -48,7 +50,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BG_Streets" width="2806" height="1606"/>
+        <image name="fundo00" width="1920" height="1080"/>
         <image name="industries-park" width="804" height="369"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
