--- a/Idle Factory/HUD/HUD Actions/GameInventoryScene/GameInventoryScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions/GameInventoryScene/GameInventoryScene.storyboard
@@ -4,24 +4,25 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Game Inventory Scene-->
+        <!--Game Inventory Scene Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="Inventory" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="GameInventoryScene" customModule="Idle_Factory" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="InventoryStoryboard" id="Y6W-OH-hqX" customClass="GameInventorySceneController" customModule="Idle_Factory" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="87Q-MC-7hz">
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="87Q-MC-7hz">
                                 <rect key="frame" x="44" y="0.0" width="808" height="393"/>
                                 <subviews>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rF0-R9-7mq">
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rF0-R9-7mq">
                                         <rect key="frame" x="0.0" y="0.0" width="808" height="393"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wbC-aU-7ec">
@@ -79,7 +80,13 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="Inventory_background"/>
+                        <constraints>
+                            <constraint firstItem="87Q-MC-7hz" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="6hG-ak-HZQ"/>
+                            <constraint firstItem="87Q-MC-7hz" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="9B8-qQ-Pwo"/>
+                            <constraint firstItem="87Q-MC-7hz" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Ee2-iq-YYl"/>
+                            <constraint firstItem="87Q-MC-7hz" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="ROo-gb-iVe"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -88,6 +95,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="Inventory_background">
+            <color red="0.6470588235294118" green="0.87058823529411766" blue="0.27058823529411763" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
