--- a/Idle Factory/UpgradeFactoryScene.storyboard
+++ b/Idle Factory/UpgradeFactoryScene.storyboard
@@ -4,28 +4,159 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Austral-Slab_Blur-Regular.otf">
+            <string>AustralSlabBlur-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Upgrade Factory Scene Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="UpgradeFactoryStoryboard" id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UpgradeFactoryStoryboard" id="Y6W-OH-hqX" customClass="UpgradeFactorySceneController" customModule="Idle_Factory" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Basic_Factory_level_1" translatesAutoresizingMaskIntoConstraints="NO" id="xZr-9J-9Kx">
+                                <rect key="frame" x="191" y="107" width="160" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="mIq-rN-mZz"/>
+                                    <constraint firstAttribute="height" constant="128" id="s30-09-RUk"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="Tft-Z6-61q">
+                                <rect key="frame" x="191" y="260" width="160" height="31"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6GT-bA-Mgt">
+                                        <rect key="frame" x="0.0" y="0.0" width="75.5" height="31"/>
+                                        <color key="tintColor" name="Inventory_background"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button">
+                                            <color key="baseForegroundColor" systemColor="labelColor"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ydD-NB-Z0x">
+                                        <rect key="frame" x="84.5" y="0.0" width="75.5" height="31"/>
+                                        <color key="tintColor" name="HudActions-background"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button">
+                                            <color key="baseForegroundColor" systemColor="labelColor"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="FTy-MV-2DS"/>
+                                </constraints>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nHu-41-Guf">
+                                <rect key="frame" x="408" y="96.5" width="1" height="221"/>
+                                <color key="backgroundColor" systemColor="labelColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="1" id="Dl2-61-unU"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Upgrades" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rc0-jP-p1Y">
+                                <rect key="frame" x="441" y="96.5" width="76.5" height="18"/>
+                                <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="GyE-cM-Qju">
+                                <rect key="frame" x="441" y="131" width="395" height="187"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="38" id="qXZ-UT-oyc">
+                                        <rect key="frame" x="0.0" y="44.5" width="395" height="38"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qXZ-UT-oyc" id="NEu-bC-qSj">
+                                            <rect key="frame" x="0.0" y="0.0" width="395" height="38"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MI5-wc-PBN">
+                                                    <rect key="frame" x="0.0" y="0.0" width="75" height="27"/>
+                                                    <subviews>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ykb-pT-hoy">
+                                                            <rect key="frame" x="0.0" y="0.0" width="75" height="18"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="18" id="FYA-G4-fVu"/>
+                                                                <constraint firstAttribute="width" constant="75" id="eKC-eO-XjV"/>
+                                                            </constraints>
+                                                            <state key="normal" title="Button"/>
+                                                            <buttonConfiguration key="configuration" style="filled" title="Upgrade">
+                                                                <fontDescription key="titleFontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="8"/>
+                                                            </buttonConfiguration>
+                                                        </button>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hx3-vd-l2e">
+                                                            <rect key="frame" x="0.0" y="18" width="75" height="9"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coin" translatesAutoresizingMaskIntoConstraints="NO" id="K8L-3D-SSh">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="37.5" height="9"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="9" id="2sT-5O-IBI"/>
+                                                                        <constraint firstAttribute="height" constant="9" id="jji-TA-YZf"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wYx-1V-vYh">
+                                                                    <rect key="frame" x="37.5" y="0.0" width="37.5" height="9"/>
+                                                                    <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="6"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="9" id="O7Y-ap-R7n"/>
+                                                            </constraints>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Rc0-jP-p1Y" firstAttribute="leading" secondItem="nHu-41-Guf" secondAttribute="trailing" constant="32" id="61p-Xh-tw0"/>
+                            <constraint firstItem="nHu-41-Guf" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="Ji7-7C-Hlu"/>
+                            <constraint firstItem="Tft-Z6-61q" firstAttribute="top" secondItem="xZr-9J-9Kx" secondAttribute="bottom" constant="25" id="LTx-kf-qdY"/>
+                            <constraint firstItem="nHu-41-Guf" firstAttribute="leading" secondItem="xZr-9J-9Kx" secondAttribute="trailing" constant="57" id="NRv-yk-fQL"/>
+                            <constraint firstItem="Tft-Z6-61q" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="147" id="V1P-Dx-XvR"/>
+                            <constraint firstItem="xZr-9J-9Kx" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="107" id="cGg-8L-SfE"/>
+                            <constraint firstItem="xZr-9J-9Kx" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="147" id="gYV-Vx-NFK"/>
+                            <constraint firstItem="Rc0-jP-p1Y" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="topMargin" constant="96.5" id="stS-hF-rJB"/>
+                            <constraint firstItem="nHu-41-Guf" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="topMargin" constant="96.5" id="uj7-39-inz"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="GyE-cM-Qju" id="hM5-Xb-4Ky"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="80"/>
+            <point key="canvasLocation" x="138.61607142857142" y="79.710144927536234"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Basic_Factory_level_1" width="469" height="288"/>
+        <image name="Coin" width="50" height="43"/>
+        <namedColor name="HudActions-background">
+            <color red="0.10199999809265137" green="0.65499997138977051" blue="0.82700002193450928" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Inventory_background">
+            <color red="0.6470000147819519" green="0.87099999189376831" blue="0.27099999785423279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
