--- a/Idle Factory/HUD/HUD Actions/GameInventoryScene/GameInventoryScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions/GameInventoryScene/GameInventoryScene.storyboard
@@ -137,6 +137,12 @@
                                                 <connections>
                                                     <outlet property="factoryId" destination="oEg-wo-FFu" id="95o-gI-rcx"/>
                                                     <outlet property="factoryTexture" destination="dlL-cN-TfT" id="cfV-Zg-81B"/>
+                                                    <outlet property="quantityType1" destination="8Tw-OE-Pv6" id="Ee2-wq-Yhh"/>
+                                                    <outlet property="quantityType2" destination="epJ-dj-EYa" id="rFe-Bs-sc0"/>
+                                                    <outlet property="quantityType3" destination="oEg-wo-FFu" id="Yiw-UZ-GJq"/>
+                                                    <outlet property="resourceType1" destination="XZ5-yh-Yo6" id="mPg-Fu-Q7g"/>
+                                                    <outlet property="resourceType2" destination="Zzm-Bj-6CK" id="2Zu-0i-CrH"/>
+                                                    <outlet property="resourceType3" destination="wsc-p7-nU9" id="SDc-fJ-pki"/>
                                                 </connections>
                                             </collectionViewCell>
                                         </cells>
@@ -144,8 +150,9 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YPY-6k-DAS">
                                         <rect key="frame" x="489" y="0.0" width="257" height="192"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Basic_Factory_level_1" translatesAutoresizingMaskIntoConstraints="NO" id="BVk-6t-fCk">
-                                                <rect key="frame" x="35" y="29" width="72" height="72"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clear" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BVk-6t-fCk">
+                                                <rect key="frame" x="35" y="30" width="72" height="69.5"/>
+                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="72" id="Yh1-It-yvx"/>
                                                     <constraint firstAttribute="width" secondItem="BVk-6t-fCk" secondAttribute="height" multiplier="1:1" id="dO5-Up-fpO"/>
@@ -404,8 +411,12 @@
                     </view>
                     <connections>
                         <outlet property="closeButton" destination="55m-EB-zmS" id="rwy-6M-CVe"/>
+                        <outlet property="coinImage1" destination="HHk-da-NFA" id="uqN-r3-UGF"/>
+                        <outlet property="coinImage2" destination="LHz-jr-mSN" id="GxV-Kw-lBY"/>
+                        <outlet property="coinImage3" destination="Du2-28-n8r" id="Dvw-lM-RsZ"/>
+                        <outlet property="coinImage4" destination="HcR-gl-KZx" id="kLX-TU-Qku"/>
                         <outlet property="collectionView" destination="rF0-R9-7mq" id="Dzt-8S-5be"/>
-                        <outlet property="factoryId" destination="sYK-Jo-vSg" id="C2P-xe-zX4"/>
+                        <outlet property="factoryImage" destination="BVk-6t-fCk" id="vqV-Vi-WEa"/>
                         <outlet property="factoryInfoView" destination="YPY-6k-DAS" id="Uj0-nd-jI7"/>
                         <outlet property="factorySerial_ID" destination="sYK-Jo-vSg" id="Vf3-HN-9p1"/>
                         <outlet property="generatePerSecType1" destination="iMK-tV-qpu" id="Uj8-xh-Xgb"/>
@@ -432,9 +443,9 @@
     </scenes>
     <resources>
         <image name="4k.tv" catalog="system" width="128" height="97"/>
-        <image name="Basic_Factory_level_1" width="469" height="288"/>
         <image name="Coin" width="50" height="43"/>
         <image name="airpods" catalog="system" width="128" height="112"/>
+        <image name="clear" catalog="system" width="128" height="114"/>
         <image name="close" width="31.5" height="31"/>
         <image name="iphone.smartbatterycase.gen2" catalog="system" width="108" height="128"/>
         <image name="tv" catalog="system" width="128" height="97"/>
